--- a/package.json
+++ b/package.json
@@ -2,30 +2,27 @@
   "name": "react_js_boilerplate",
   "version": "1.0.0",
   "description": "react_js_boilerplate",
-  "main": "src/App.js",
+  "main": "index.js",
   "scripts": {
+    "start": "npm run serve:hot",
     "build": "webpack",
+    "build:lib": "webpack --config webpack.lib.config.js -p",
     "watch": "webpack --watch",
     "serve": "webpack-dev-server",
     "serve:hot": "webpack-dev-server --inline --hot -d",
-    "lint": "eslint ."
+    "clean": "rm -rf dist/ lib/",
+    "prepublish": "npm run build:lib"
   },
   "author": "James Batt",
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.3.26",
-    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.0",
-    "eslint-plugin-jsx-a11y": "^1.0.3",
-    "eslint-plugin-react": "^5.0.1",
     "node-sass": "^3.8.0",
     "path": "^0.12.7",
     "sass-loader": "^4.0.0",
