--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-fixed-sidebar",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A fixed sidebar for react apps including support for mobile touch to open/close",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,14 @@
   },
   "author": "James Batt",
   "license": "MIT",
+  "repository": "https://github.com/place1/react-fixed-sidebar",
+  "bugs": "https://github.com/place1/react-fixed-sidebar/issues",
+  "keywords": [
+    "react",
+    "side bar",
+    "nav bar",
+    "navigation"
+  ],
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-loader": "^6.2.1",
@@ -28,11 +36,14 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "hammerjs": "^2.0.8",
+    "webpack-dev-server": "^1.14.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
+  },
+  "peerDependencies": {
+    "react": "^15.0.1"
+  },
+  "dependencies": {
+    "hammerjs": "^2.0.8"
   }
 }
